--- a/admin/assets/css/panel.css
+++ b/admin/assets/css/panel.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Preahvihear&family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
     --background: #720418;
@@ -142,16 +144,23 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+html{
+    font-size: 62.5%;
+}
+html,body{
+    overflow-x: hidden;
+}
 
 
 .sidebar {
     background-color: var(--background);
-    width: 23rem;
+    width: 30rem;
     min-height: 400%;
     z-index: 10000;
     position: absolute;
     left: 0;
     top: 0;
+    overflow: hidden;
 }
 
 .sidebar__header {
@@ -160,7 +169,7 @@ table {
 }
 
 .sidebar__list {
-    height: 1.5rem;
+    height: 4rem;
 }
 
 .sidebar__header,
@@ -213,13 +222,15 @@ table {
 .container {
     background-color: var(--main-background);
     min-height: 400vh;
-    width: 100%;
 }
 
 .main {
     position: absolute;
-    left: 23rem;
+    left: 30rem;
     padding: 5rem 2rem;
+    height:  400vh;
+    width: 66vw;
+    overflow: hidden;
 }
 
 .add_book {
@@ -229,14 +240,13 @@ table {
     font-family: 'Montserrat';
     font-style: normal;
     color: var(--main-title);
+    width: 100%;
 }
 
 .add_book__title,.about_form__title {
     font-weight: 600;
     font-size: 30px;
 }
-
-/* .search_book {} */
 
 .search_book__title {
     font-weight: 600;
@@ -290,7 +300,7 @@ table {
     align-items: flex-start;
     padding: 16px 30px 30px;
     gap: 24px;
-    width: 60vw;
+    width: 90%;
 }
 
 .book_form_add>div,.about_form_add>div {
@@ -331,4 +341,60 @@ table {
     outline: none;
     cursor: pointer;
     padding: .5rem 0;
+}
+
+  .join_us .join_us_title,.contact_us .contact_us_title {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 196.19%;
+    color: var(--main-title);
+  }
+  .join_us .join_us_table, .contact_us .contact_us_table {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-collapse: collapse;
+    font-family: "Nunito Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 115%;
+    text-align: center;
+  }
+  .join_us .join_us_table th,.contact_us .contact_us_table th {
+    background-color: var(--background);
+    color: var(--white-color);
+  }
+  .join_us .join_us_table th, .join_us .join_us_table td,.contact_us .contact_us_table th, .contact_us .contact_us_table td {
+    padding: 8px 22.5px;
+  }
+  .join_us .join_us_table tr:nth-child(odd), .contact_us .contact_us_table tr:nth-child(odd) {
+    background-color: #F9FAFC;
+  }
+  .join_us .join_us_table{
+     width: 70%;
+  }
+  .contact_us {
+    margin: 100px 0;
+  }
+  .contact_us .contact_us_table{
+    width: 100%;
+  }
+@media screen and (max-width:991px){
+    .sidebar{
+        width: 0;
+    }
+    .main {
+        left: 0;
+        padding: 4rem 1rem;
+        width: 92vw;
+    }
+}
+@media screen and (max-width:576px){
+  .main{
+    width: 75vw;
+  }
+  .search_book_form input {
+    width: 50%;
+  }
 }
