--- a/admin/assets/css/nav.css
+++ b/admin/assets/css/nav.css
@@ -14,6 +14,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 16px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 95%;
   }
   .navbar .nav_left {
     display: flex;
@@ -63,6 +67,11 @@
   }
   .active_close {
     display: inline-block;
+  }
+}
+@media screen and (max-width: 576px) {
+  .navbar {
+    width: 90%;
   }
 }
 /*# sourceMappingURL=nav.css.map */
