--- a/admin/assets/css/nav.css
+++ b/admin/assets/css/nav.css
@@ -9,15 +9,9 @@
 @media screen and (max-width: 991px) {
   .navbar {
     background: #FFFAF5;
-    z-index: 2000;
+    padding: 16px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 16px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 95%;
   }
   .navbar .nav_left {
     display: flex;
@@ -56,7 +50,6 @@
   }
   .active_sidebar {
     width: 80%;
-    overflow: visible;
   }
   .close_sidebar {
     margin-left: auto;
@@ -68,10 +61,4 @@
   .active_close {
     display: inline-block;
   }
-}
-@media screen and (max-width: 576px) {
-  .navbar {
-    width: 90%;
-  }
-}
-/*# sourceMappingURL=nav.css.map */
+}/*# sourceMappingURL=nav.css.map */
