--- a/assets/css/book.css
+++ b/assets/css/book.css
@@ -407,7 +407,7 @@ table {
     object-fit: contain;
 }
 
-#blue {
+.blue {
     padding: 0px 10px;
     width: 69px;
     background-color: #2F80ED;
@@ -415,7 +415,7 @@ table {
     border-radius: 3px;
 }
 
-#blue>p {
+.blue>p {
     padding: 10px;
     font-weight: 900;
     font-size: 12px;
@@ -912,7 +912,7 @@ width: 70%;
         padding: 10px;
     }
 
-    #blue>p {
+    .blue>p {
         padding: 10px;
     }
 
@@ -976,7 +976,7 @@ width: 70%;
         text-align: center;
     }
 
-    #blue>p {
+    .blue>p {
         padding: 15px;
     }
 
